# CV_GARRIC_Nicolas

./: Cargo.toml  dev.sh
src/: main.rs  pdf.rs
src/components/: experience.rs  header.rs  mod.rs  sidebar.rs
src/data/: cv.rs  cv_en.rs  cv_ja.rs  mod.rs
src/templates/: engine.rs  mod.rs
src/templates/pages/: cv.rs  mod.rs
src/utils/: mod.rs  tera_helpers.rs
static/css/: main.css  main.css.map
static/scss/: main.scss
static/scss/components/: _experience.scss  _header.scss  _sidebar.scss
static/scss/pages/: _cv.scss
static/scss/utils/: _colors.scss  _mixins.scss  _reset.scss  _variables.scss
templates/components/: education.html  experience.html  header.html  sidebar.html
templates/components/icons/: contact_icon.html  exp_icon.html
templates/layouts/: base.html
templates/pages/: cv.html
